dafolo/templates/sagdokindeks-api-producer/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-pipeline-test-ingress
  namespace: dafolo
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - test.digitor.dk
    secretName: quickstart-example-tls
  rules:
    - host: test.digitor.dk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sagdokindeks-api-producer
              port:
                number: 80
